--- a/portfolio.html
+++ b/portfolio.html
@@ -9,117 +9,129 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <title>portfolio</title>
-        <link rel="stylesheet" href="stylse/styles.css">
+    <link rel="stylesheet" href="https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css" />
+    <link rel="stylesheet" href="stylse/reset.css">
+    <link rel="stylesheet" href="stylse/styles.css">
 </head>
 <body>
     <header class="header">
-    <nav class="headr-nav">
-                <section class="header-logo">
+        <div class="container header-box">
+            <section class="header-logo">
                 <a class="header-logo-link link" href="" lang="en"><span class="logo-color">Web</span>Studio </a>
-                </section>
+            </section>
+            <nav class="headr-nav">
                 <ul class="nav-list list">
-                    <li class="nav-item"><a class="nav link" href="./index.html"> Студия</a></li>
-                    <li class="nav-item"><a class="nav link current" href="./portfolio.html">Портфолио</a></li>
-                    <li class="nav-item"><a class="nav link" href="" >Контакты</a></li>
+                    <li class="nav-item"><a class="nav link " href="./index.html"> Студия</a></li>
+                    <li class="nav-item"><a class="nav link current" href="">Портфолио</a></li>
+                    <li class="nav-item"><a class="nav link" href="">Контакты</a></li>
                 </ul>
-    </nav>
-        <section class="contact">
+            </nav>
+            <section class="contact">
                 <ul class="contact-list list">
-                    <li class="contact-item"><a class="contact-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
-                    <li class="contact-item"><a class="contact-link link" href="tel:+380961111111" >+38 096 111 11 11</a></li>
+                    <li class="contact-item"><a class="contact-link link"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="contact-item"><a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
                 </ul>
-        </section>
-    </header> 
+            </section>
+        </div>
+    </header>
     <main class="filter">
         <section>
-            <ul class="filter-list list">
+            <div class="container">
+            <ul class="filter-list list ">
                 <li class="filter-item"><input class="filter-btn btn-current" type="button" value="Все"></li>
                 <li class="filter-item"><input class="filter-btn" type="button" value="Веб-сайт"></li>
                 <li class="filter-item"><input class="filter-btn" type="button" value="Приложение"></li>
                 <li class="filter-item"><input class="filter-btn" type="button" value="Дизайн"></li>
                 <li class="filter-item"><input class="filter-btn" type="button" value="Маркетинг"></li>
             </ul>
+            </div>
+            <div class="container">
             <ul class="projeсt-list list">
-                <li class="project-item" style=" border:1px solid #EEEEEE;">
+                <li class="project-item">
                     <img class="projeсt-image" src="./images/p-1.jpg" 
                     alt="Екран ноутбука на якому зображено сайт" 
                     width="370">
                     <h3 class="projeсt-name">Технокряк</h3>
                     <p class="projeсt-part">Веб-сайт</p>
                 </li>
-                <li class="project-item" style=" border:1px solid #EEEEEE;">
+                <li class="project-item">
                     <img class="projeсt-image" src="./images/p-2.jpg" 
                     alt="два гравці баскетболу" 
                     width="370">
                 <h3 class="projeсt-name">Постер <span lang="en">New Orlean vs Golden Star</span> </h3>
                 <p class="projeсt-part">Дизайн</p>
                 </li>
-                <li class="project-item" style=" border:1px solid #EEEEEE;">
+                <li class="project-item">
                     <img class="projeсt-image" src="./images/p-3.jpg" 
                     alt="логотип ресторану з рибою" 
                     width="370">
                 <h3 class="projeсt-name">Ресторан <span lang="en">Seafood</span> </h3>
                 <p class="projeсt-part">Приложение</p>
                 </li>
-                <li class="project-item" style=" border:1px solid #EEEEEE;">
+                <li class="project-item">
                     <img class="projeсt-image" src="./images/p-4.jpg"
                     alt="навушники" 
                     width="370">
                 <h3 class="projeсt-name">Проект <span lang="en">Prime</span> </h3>
                 <p class="projeсt-part">Маркетинг</p>
                 </li>
-                <li class="project-item" style=" border:1px solid #EEEEEE;">
+                <li class="project-item">
                     <img class="projeсt-image" src="./images/p-5.jpg"
                     alt="дві коробки" 
                     width="370">
                 <h3 class="projeсt-name">Проект <span lang="en">Boxes</span> </h3>
                 <p class="projeсt-part">Приложение</p>
                 </li>
-                <li class="project-item" style=" border:1px solid #EEEEEE;">
+                <li class="project-item">
                     <img class="projeсt-image" src="./images/p-6.jpg" 
                     alt="компютер" 
                     width="370">
                 <h3 class="projeсt-name" lang="en">Inspiration has no Borders</h3>
                 <p class="projeсt-part">Веб-сайт</p>
                 </li>
-                <li class="project-item" style=" border:1px solid #EEEEEE;">
+                <li class="project-item">
                     <img class="projeсt-image" src="./images/p-7.jpg" 
                     alt="книга" 
                     width="370">
                 <h3 class="projeсt-name">Издание <span lang="en">Limited Edition</span> </h3>
                 <p class="projeсt-part">Дизайн</p>
                 </li>
-                <li class="project-item" style=" border:1px solid #EEEEEE;">
+                <li class="project-item">
                     <img class="projeсt-image" src="./images/p-8.jpg" 
                     alt="етікетка" 
                     width="370">
                 <h3 class="projeсt-name">Проект <span lang="en">LAB</span> </h3>
                 <p class="projeсt-part">Маркетинг</p>
                 </li>
-                <li class="project-item" style=" border:1px solid #EEEEEE;">
+                <li class="project-item">
                     <img class="projeсt-image" src="./images/p-9.jpg" 
                     alt="компютер" 
                     width="370">
                 <h3 class="projeсt-name" lang="en">Growing Business</h3>
                 <p class="projeсt-part">Приложение</p></li>
             </ul>
+            </div>
         </section>
     </main>
-    <footer class="footer">
-        <section class="footer-box">
+<footer class="footer">
+    <section class="footer-box">
+        <div class="container">
             <a class="footer-logo-link link" href="" lang="en"><span class="logo-color">Web</span>Studio </a>
             <address class="footer-adr"><a class="footer-map link" href="https://goo.gl/maps/GrZTc98YmpMvjkZD6"
                     target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
                     Украинки, 26</a></address>
             <ul class="footer-list list">
-                <li>
+                <li class="footer-item">
                     <a class="footer-list-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
                     <a class="footer-list-link link" href="tel:+380961111111">+38 099 111 11 11</a>
                 </li>
             </ul>
-        </section>
-    </footer>
+        </div>
+    </section>
+</footer>
 </body>
 </html>
