--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -9,53 +9,63 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet">
     <title>Document</title>
-        <link rel="stylesheet" href="stylse/styles.css">
+    <link rel="stylesheet" href="https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css" />
+    <link rel="stylesheet" href="stylse/reset.css">
+    <link rel="stylesheet" href="stylse/styles.css">
+
 </head>
 <body  class="body">
     <header class="header">
-    <nav class="headr-nav">
-      <section class="header-logo">
-                  <a class="header-logo-link link" href="" lang="en"><span class="logo-color">Web</span>Studio </a>
-                </section>
-                <ul class="nav-list list">
-                    <li class="nav-item"><a class="nav link current" href=""> Студия</a></li>
-                    <li class="nav-item"><a class="nav link" href="./portfolio.html" >Портфолио</a></li>
-                    <li class="nav-item"><a class="nav link" href="" >Контакты</a></li>
-                </ul>
-      </nav>
-        <section class="contact">
-                <ul class="contact-list list">
-                    <li class="contact-item"><a class="contact-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
-                    <li class="contact-item"><a class="contact-link link" href="tel:+380961111111" >+38 096 111 11 11</a></li>
-                </ul>
+      <div class="container header-box">
+        <section class="header-logo">
+          <a class="header-logo-link link" href="" lang="en"><span class="logo-color">Web</span>Studio </a>
         </section>
+        <nav class="headr-nav">
+          <ul class="nav-list list">
+            <li class="nav-item"><a class="nav link current" href=""> Студия</a></li>
+            <li class="nav-item"><a class="nav link" href="./portfolio.html">Портфолио</a></li>
+            <li class="nav-item"><a class="nav link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <section class="contact">
+          <ul class="contact-list list">
+            <li class="contact-item"><a class="contact-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
+            <li class="contact-item"><a class="contact-link link" href="tel:+380961111111" >+38 096 111 11 11</a></li>
+          </ul>
+        </section>
+      </div>
     </header> 
   <main class="main">
       <section class="hero">
-          <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+        <div class="container">
+          <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
         <button class="order-btn" type="button"  >Заказать услугу</button> 
+        </div>
       </section>
       <section class="features">
-      <ul class="features-list list">
-          <li class="features-item">
-        <h3 class="features-name">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-        <p class="features-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-          </li>
-        <li class="features-item">
-            <h3 class="features-name">ПУНКТУАЛЬНОСТЬ</h3>
-            <p class="features-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой. </p>
-        </li>
-        <li class="features-item">
-            <h3 class="features-name">ПЛАНИРОВАНИЕ</h3>
-            <p class="features-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-        </li>
-        <li class="features-item">
-            <h3 class="features-name">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-            <p class="features-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-        </li>
-      </ul>
+        <div class="container">
+          <ul class="features-list list">
+            <li class="features-item">
+              <h3 class="features-name">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+              <p class="features-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-name">ПУНКТУАЛЬНОСТЬ</h3>
+              <p class="features-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой. </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-name">ПЛАНИРОВАНИЕ</h3>
+              <p class="features-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-name">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+              <p class="features-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </li>
+          </ul>
+        </div>
     </section>
     <section class="pic">
+      <div class="container">
       <h2 class="pic-title">Чем мы занимаемся</h2>
       <ul class="pic-list list">
           <li class="pic-item">
@@ -74,8 +84,10 @@
             width="370">
         </li>
       </ul>
+      </div>
     </section>
     <section class="team">
+      <div class="container">
       <h2 class="team-title">Наша команда</h2>
       <ul class="team-list list">
         <li class="team-item">
@@ -107,21 +119,24 @@
                 <p class="team-position" lang="en">UI Designer</p>
         </li>
       </ul>
+      </div>
     </section>
 </main>
   <footer class="footer">
     <section class="footer-box">
+    <div class="container">
     <a class="footer-logo-link link" href="" lang="en"><span class="logo-color">Web</span>Studio </a>
         <address class="footer-adr"><a class="footer-map link" href="https://goo.gl/maps/GrZTc98YmpMvjkZD6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
             Украинки, 26</a></address>
             <ul class="footer-list list">
-              <li>
+              <li class="footer-item">
                 <a class="footer-list-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
               <li>
                 <a class="footer-list-link link" href="tel:+380961111111">+38 099 111 11 11</a>
               </li>
             </ul>
+            </div>
     </section>
   </footer>
 </body>
