--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css" />
+    <title>Студія</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="stylse/reset.css">
     <link rel="stylesheet" href="stylse/styles.css">
 
@@ -17,9 +19,7 @@
 <body  class="body">
     <header class="header">
       <div class="container header-box">
-        <section class="header-logo">
           <a class="header-logo-link link" href="" lang="en"><span class="logo-color">Web</span>Studio </a>
-        </section>
         <nav class="headr-nav">
           <ul class="nav-list list">
             <li class="nav-item"><a class="nav link current" href=""> Студия</a></li>
@@ -27,12 +27,8 @@
             <li class="nav-item"><a class="nav link" href="">Контакты</a></li>
           </ul>
         </nav>
-        <section class="contact">
-          <ul class="contact-list list">
-            <li class="contact-item"><a class="contact-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
-            <li class="contact-item"><a class="contact-link link" href="tel:+380961111111" >+38 096 111 11 11</a></li>
-          </ul>
-        </section>
+            <a class="contact-link link" href="mailto:info@devstudio.com" >info@devstudio.com</a>
+            <a class="contact-link link" href="tel:+380961111111" >+38 096 111 11 11</a>
       </div>
     </header> 
   <main class="main">
@@ -61,6 +57,7 @@
               <h3 class="features-name">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="features-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
+
           </ul>
         </div>
     </section>
@@ -71,18 +68,19 @@
           <li class="pic-item">
               <img class="pic-image" src="./images/img-5.jpg" 
               alt="программист пишет HTML"
-              width="370">
+              >
           </li>
         <li class="pic-item">
             <img class="pic-image" src="./images/img-6.jpg" 
             alt="программист пишет CSS"
-            width="370">
+            >
         </li>
         <li class="pic-item">
             <img class="pic-image" src="./images/img-7.jpg" 
             alt="программист пишет JS"
-            width="370">
+            >
         </li>
+
       </ul>
       </div>
     </section>
@@ -94,49 +92,52 @@
             <img class="team-image" src="./images/img.jpg" 
             alt="Портрет Игорь Демьяненко"
             width="270">
-              <h3 class="team-name">Игорь Демьяненко</h3> 
-            <p class="team-position" lang="en"> Product Designer</p>  
+            <div class="team-card">
+            <h3 class="team-name">Игорь Демьяненко</h3>
+            <p class="team-position" lang="en"> Product Designer</p>
+            </div>
           </li>
         <li class="team-item">
             <img class="team-image" src="./images/img-2.jpg" 
             alt="Портрет Ольга Репина" 
             width="270">
-                <h3 class="team-name">Ольга Репина</h3>
-                <p class="team-position" lang="en">Frontend Developer</p>          
+            <div class="team-card"><h3 class="team-name">Ольга Репина</h3>
+            <p class="team-position" lang="en">Frontend Developer</p>
+          </div>
         </li>  
         <li class="team-item">
             <img class="team-image" src="./images/img-3.jpg" 
             alt="Портрет Николай Тарасов" 
             width="270">
-                <h3 class="team-name">Николай Тарасов</h3>
-                <p class="team-position" lang="en">Marketing</p>
+            <div class="team-card">
+              <h3 class="team-name">Николай Тарасов</h3>
+            <p class="team-position" lang="en">Marketing</p>
+            </div>
         </li>
         <li class="team-item">
             <img class="team-image" src="./images/img-4.jpg" 
             alt="Портрет Михаил Ермаков" 
             width="270">
-                <h3 class="team-name">Михаил Ермаков</h3>
-                <p class="team-position" lang="en">UI Designer</p>
+            <div class="team-card">
+              <h3 class="team-name">Михаил Ермаков</h3>
+            <p class="team-position" lang="en">UI Designer</p>
+            </div>
         </li>
+
       </ul>
       </div>
     </section>
 </main>
   <footer class="footer">
     <section class="footer-box">
-    <div class="container">
-    <a class="footer-logo-link link" href="" lang="en"><span class="logo-color">Web</span>Studio </a>
+      <div class="container">
+        <a class="footer-logo-link link" href="" lang="en"><span class="logo-color">Web</span>Studio </a>
         <address class="footer-adr"><a class="footer-map link" href="https://goo.gl/maps/GrZTc98YmpMvjkZD6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
-            Украинки, 26</a></address>
-            <ul class="footer-list list">
-              <li class="footer-item">
-                <a class="footer-list-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-              </li>
-              <li>
-                <a class="footer-list-link link" href="tel:+380961111111">+38 099 111 11 11</a>
-              </li>
-            </ul>
-            </div>
+            Украинки, 26</a>
+        </address>
+        <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="footer-link link" href="tel:+380961111111">+38 099 111 11 11</a>
+      </div>
     </section>
   </footer>
 </body>
