--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
                 <li class="filter-item"><input class="filter-btn" type="button" value="Дизайн"></li>
                 <li class="filter-item"><input class="filter-btn" type="button" value="Маркетинг"></li>
             </ul>
-            <ul class="project-list">
+            <ul class="project-list list">
                 <li class="project-item">
                     <img class="projeсt-image" src="./images/p-1.jpg" 
                     alt="Екран ноутбука на якому зображено сайт" 
